--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Ticket</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="Membership()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
