--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -3,7 +3,7 @@
     <ion-title>Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
-        <ion-icon ios="ios-home" md="md-home" ></ion-icon>
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -13,19 +13,19 @@
 <ion-content>
   <ion-grid class="page-header" no-padding>
     <ion-row style="text-align: center">
-      <ion-col col-6 style="background-color: lightcoral;">
+      <ion-col col-6 style="background-color: lightgray;" (click)="Trade()">
         <h5>Buy</h5>
       </ion-col>
-      <ion-col col-6 style="background-color: lightgray" (click)="Sell()">
+      <ion-col col-6 style="background-color: lightcoral">
         <h5>Sell</h5>
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-grid>
-    <ion-row style="padding-top: 50px"></ion-row>
-    <ion-row padding style="background-color: lightgrey;height: 120px">
+    <ion-row style="padding-top: 0px"></ion-row>
+    <ion-row style="background-color: lightgrey;height: 90px">
       <ion-col col-12>
-        Buy amount
+        Sell amount
       </ion-col>
       <ion-col col-10>
         <ion-list>
@@ -39,94 +39,105 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-grid>
+    <ion-row style="padding-top: 0px"></ion-row>
+    <ion-row style="background-color: lightgrey;height: 90px">
+      <ion-col col-12>
+        Prise / Unit
+      </ion-col>
+      <ion-col col-10>
+        <ion-list>
+          <ion-item>
+            <ion-input type="text" value=""></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col col-2 style="padding-top: 30px">
+        THB
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <ion-grid padding>
     <ion-row style="padding-bottom: 20px">
       <ion-col col-12 style="text-align: center">
-        <h4>History (buy)</h4>
+        <h4>List (Sell)</h4>
       </ion-col>
     </ion-row>
     <ion-list>
+
       <ion-item no-padding>
         <ion-row style="font-size: 10px">
           <ion-col col-12>
             DD/MM/YY
           </ion-col>
-          <ion-col col-4>
+          <ion-col col-3>
             Amount
           </ion-col>
-          <ion-col col-4>
+          <ion-col col-3>
             Prize/Unit
           </ion-col>
-          <ion-col col-4>
-            Total prize
+          <ion-col col-3>
+            Sell (Unit)
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
+          <ion-col col-3>
+            Total sell
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
             <b>100 coin</b>
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
+          <ion-col col-3 style="font-size: 14px">
             <b>100 BTH</b>
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
-            <b>10,000 BTH</b>
+          <ion-col col-3 style="font-size: 14px">
+            <b>90 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>9,000 BTH</b>
           </ion-col>
         </ion-row>
       </ion-item>
+
       <ion-item no-padding>
         <ion-row style="font-size: 10px">
           <ion-col col-12>
             DD/MM/YY
           </ion-col>
-          <ion-col col-4>
+          <ion-col col-3>
             Amount
           </ion-col>
-          <ion-col col-4>
+          <ion-col col-3>
             Prize/Unit
           </ion-col>
-          <ion-col col-4>
-            Total prize
+          <ion-col col-3>
+            Sell (Unit)
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
+          <ion-col col-3>
+            Total sell
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
             <b>100 coin</b>
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
+          <ion-col col-3 style="font-size: 14px">
             <b>100 BTH</b>
           </ion-col>
-          <ion-col col-4 style="font-size: 14px">
-            <b>10,000 BTH</b>
+          <ion-col col-3 style="font-size: 14px">
+            <b>90 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>9,000 BTH</b>
           </ion-col>
         </ion-row>
       </ion-item>
-      <ion-item no-padding>
-        <ion-row style="font-size: 10px">
-          <ion-col col-12>
-            DD/MM/YY
-          </ion-col>
-          <ion-col col-4>
-            Amount
-          </ion-col>
-          <ion-col col-4>
-            Prize/Unit
-          </ion-col>
-          <ion-col col-4>
-            Total prize
-          </ion-col>
-          <ion-col col-4 style="font-size: 14px">
-            <b>100 coin</b>
-          </ion-col>
-          <ion-col col-4 style="font-size: 14px">
-            <b>100 BTH</b>
-          </ion-col>
-          <ion-col col-4 style="font-size: 14px">
-            <b>10,000 BTH</b>
-          </ion-col>
-        </ion-row>
-      </ion-item>
+
+
     </ion-list>
   </ion-grid>
 
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px;padding-top: 15px" (click)="Confirm()">
+      <ion-col col-12 style="text-align: center;font-size: 16px;padding-top: 15px" (click)="ConfirmSell()">
         <b>Confirm</b>
       </ion-col>
     </ion-row>
