--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -53,7 +53,6 @@
     <ion-row style="align-self: center">
       <img src="../../assets/imgs/foot.PNG" />
     </ion-row>
+    <button style="font-size: 20px" ion-button round text-left ion-button full (click)="gopage1()">ถัดไป </button>
   </ion-grid>
-
-
 </ion-content>
