--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -14,4 +14,5 @@
 
 <ion-footer id="site-footer" text-center >
     <ion-title (click)="winpage()">Done</ion-title>
+    <ion-title (click)="losepage()">Lose</ion-title>
 </ion-footer>
