--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -19,5 +19,13 @@
 
 
 <ion-content padding>
-
+  <button ion-button icon-start (click)="Mycollection()">
+    <ion-icon ></ion-icon>
+    My Collection
+  </button>
+  
+  <button ion-button icon-end (click)="Marketplace()">
+    Marketplace
+    <ion-icon ></ion-icon>
+  </button>
 </ion-content>
