UPDATE page membership

--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -48,15 +48,21 @@
 
     <ion-row padding>
       <b>Game AAA</b>
-      <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      <div (click)="goToGameDetailPage()">
+       <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      </div>
     </ion-row>
     <ion-row padding>
       <b>Game BBB</b>
-      <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      <div (click)="goToGameDetailPage()">
+        <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      </div>
     </ion-row>
     <ion-row padding>
       <b>Game CCC</b>
-      <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      <div (click)="goToGameDetailPage()">
+       <img src="../../assets/imgs/game.PNG" style="height: 120px;" />
+      </div>
     </ion-row>
 
   </ion-grid>
