--- a/src/pages/marketplace/marketplace.html
+++ b/src/pages/marketplace/marketplace.html
@@ -11,8 +11,102 @@
   </ion-navbar>
 
 </ion-header>
-
-
 <ion-content padding>
-
+  <ion-grid padding>
+    <ion-row style="padding-bottom: 20px">
+    </ion-row>
+    <ion-list>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item A</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>5,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item B</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>10,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item B</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>10,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item B</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>10,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item B</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>10,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>Item B</b>
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+          </ion-col>
+          <ion-col col-4 style="font-size: 14px">
+            <b>10,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-list>
+  </ion-grid>
 </ion-content>
