--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -60,6 +60,6 @@
 
 <ion-footer>
   <ion-toolbar style="text-align:center" color="pink">
-    <ion-title (click)="gotoConvertPage()">Convert ticket</ion-title>
+    <ion-title (click)="goToConvertClick()">Convert ticket</ion-title>
   </ion-toolbar>
 </ion-footer>
