--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -27,7 +27,7 @@
       </ion-col>
 
       <ion-col col-6>
-        <button ion-button block margin-bottom style="background-color: lightcoral;color:black">Marketplace</button>
+        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="Marketplace()">Marketplace</button>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -47,7 +47,7 @@
         <ion-icon name="alert" item-start large></ion-icon>
       </ion-item>
       <div text-right>
-        <b>Detail ></b>
+        <b (click)="DetailCollectionA()">Detail ></b>
       </div>
     </ion-card-content>
   </ion-card>
