--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-buttons left>
+        <button style="font-size: 15px" ion-button (click)="gopage1()">WEB</button>
       <button ion-button>
         <ion-icon name="menu"></ion-icon>
       </button>
@@ -53,6 +54,5 @@
     <ion-row style="align-self: center">
       <img src="../../assets/imgs/foot.PNG" />
     </ion-row>
-    <button style="font-size: 20px" ion-button round text-left ion-button full (click)="gopage1()">ถัดไป </button>
   </ion-grid>
 </ion-content>
