--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -15,4 +15,9 @@
 
 <ion-content padding>
 
+  <button ion-button icon-start (click)="detail()">
+    <ion-icon ></ion-icon>
+    test
+  </button>
+ 
 </ion-content>
