--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -19,5 +19,8 @@
     <ion-icon ></ion-icon>
     test
   </button>
- 
+  <button ion-button icon-start (click)="his()">
+    <ion-icon ></ion-icon>
+    history
+  </button>
 </ion-content>
