--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -23,7 +23,7 @@
   <ion-grid>
     <ion-row center text-center>
       <ion-col col-6>
-        <button ion-button block margin-bottom style="background-color: lightcoral;color:black">My Collection</button>
+        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="mycol()">My Collection</button>
       </ion-col>
 
       <ion-col col-6>
