--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -6,21 +6,100 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>mycollect</ion-title>
+  <ion-navbar color="pink">
+    <ion-title>My Collect</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
-  <button ion-button icon-start (click)="detail()">
-    <ion-icon ></ion-icon>
-    test
-  </button>
-  <button ion-button icon-start (click)="his()">
-    <ion-icon ></ion-icon>
-    history
-  </button>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="trade()">Trade History</h2>
+  <ion-grid>
+    <ion-row>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+      <ion-col (click)="detail()">
+        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
