--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the CollectionPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title center text-center>Collection</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
@@ -23,7 +17,7 @@
   <ion-grid>
     <ion-row center text-center>
       <ion-col col-6>
-        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="mycol()">My Collection</button>
+        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="mycollection()">My Collection</button>
       </ion-col>
 
       <ion-col col-6>
