update my collection page

--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="trade()">Trade History</h2>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="his()">Trade History</h2>
   <ion-grid>
     <ion-row>
       <ion-col (click)="detail()">
