--- a/src/pages/tradehistory/tradehistory.html
+++ b/src/pages/tradehistory/tradehistory.html
@@ -1,15 +1,7 @@
-<!--
-  Generated template for the TradehistoryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar his>
     <ion-title>tradehistory</ion-title>
   </ion-navbar>
-
 </ion-header>
 <ion-content padding>
   <ion-list>
@@ -27,13 +19,13 @@
         <ion-col col-4>
           
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           Sell item A
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           1 item
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           10,000 BTH
         </ion-col>
       </ion-row>
@@ -52,13 +44,13 @@
         <ion-col col-4>
           
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           Buy item B
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           2 item
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           10,000 BTH
         </ion-col>
       </ion-row>
@@ -76,13 +68,13 @@
         </ion-col>
         <ion-col col-4>
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
         Sell item A
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
           1 item
         </ion-col>
-        <ion-col col-4 style="font-size: 14px">
+        <ion-col col-4 style="font-size: 14px;font: bold">
         10,000 BTH
         </ion-col>
       </ion-row>
