update web page

--- a/src/pages/web1/web1.html
+++ b/src/pages/web1/web1.html
@@ -125,4 +125,7 @@
       </ion-item>
     </ion-list>
   </ion-card>
+  <ion-buttons text-center>
+      <button ion-button (click)="home()"> home </button>
+  </ion-buttons> 
 </ion-content>
