--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -12,7 +12,15 @@
   <textarea style="height: 50%;width: 100%;background-color: black;margin-top: 20px;margin-bottom: 20px;"></textarea>
 </ion-content>
 
-<ion-footer id="site-footer" text-center >
-    <ion-title (click)="winpage()">Done</ion-title>
-    <ion-title (click)="losepage()">Lose</ion-title>
+<ion-footer id="site-footer" text-center>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-title (click)="winpage()">Done</ion-title>
+      </ion-col>
+      <ion-col>
+        <ion-title (click)="losepage()">Lose</ion-title>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-footer>
