update gameresult page

--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -16,7 +16,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-title (click)="winpage()">Done</ion-title>
+        <ion-title (click)="winpage()">Win</ion-title>
       </ion-col>
       <ion-col>
         <ion-title (click)="losepage()">Lose</ion-title>
