--- a/src/pages/success/success.html
+++ b/src/pages/success/success.html
@@ -13,37 +13,37 @@
 <ion-content no-padding>
   <ion-grid no-padding style="background-color: lightgray;height: 250px">
     <ion-row style="text-align: center;padding-top: 50px">
-      <ion-col col-12 style="font-size: 25px;padding-bottom: 15px">
+      <ion-col col-12 style="font-size: 20px;padding-bottom: 15px">
         Buy coin amount
       </ion-col>
-      <ion-col col-12 style="font-size: 30px;padding-bottom: 15px">
+      <ion-col col-12 style="font-size: 24px;padding-bottom: 15px">
         <b>100 coin</b>
       </ion-col>
-      <ion-col col-12 style="font-size: 25px;padding-bottom: 15px">
+      <ion-col col-12 style="font-size: 20px;padding-bottom: 15px">
         10,000 THB
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-grid no-padding style="background-color: white;height: 280px">
     <ion-row style="text-align: center;padding-top: 50px">
-      <ion-col col-12 style="font-size: 25px;padding-bottom: 15px">
+      <ion-col col-12 style="font-size: 20px;padding-bottom: 15px">
         <b>Successful !</b>
       </ion-col>
-      <ion-col col-12 style="font-size: 18px;padding-bottom: 15px">
+      <ion-col col-12 style="font-size: 16px;padding-bottom: 15px">
         Ref. id
       </ion-col>
-      <ion-col col-12 style="font-size: 18px">
+      <ion-col col-12 style="font-size: 16px">
         452487
       </ion-col>
-      <ion-col col-12 style="font-size: 18px">
+      <ion-col col-12 style="font-size: 16px">
         10/07/2018
       </ion-col>
     </ion-row>
   </ion-grid>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px;padding-top: 15px" (click)="Trade()">
-        <b>Done</b>
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Trade()">
+        <button ion-button color="dark" clear block><b>Done</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
