--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -14,10 +14,10 @@
   <ion-grid class="page-header" no-padding>
     <ion-row style="text-align: center">
       <ion-col col-6 style="background-color: lightcoral;">
-        <h5>Buy</h5>
+        <button ion-button color="dark" clear block><b>Buy</b></button>
       </ion-col>
       <ion-col col-6 style="background-color: lightgray" (click)="Sell()">
-        <h5>Sell</h5>
+        <button ion-button color="dark" clear block><b>Sell</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -126,8 +126,8 @@
 
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px;padding-top: 15px" (click)="Confirm()">
-        <b>Confirm</b>
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
+        <button ion-button color="dark" clear block><b>Confirm</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
