fixed confirm button

--- a/src/pages/buy-collection/buy-collection.html
+++ b/src/pages/buy-collection/buy-collection.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title center text-center>Buy Collection</ion-title>
+    <ion-title center text-center>By Collection</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -39,6 +39,6 @@
 </ion-content>
 <ion-footer no-shadow>
   <ion-toolbar position="bottom">
-    <button style="background-color: lightcoral;color:black" ion-button full (click)="presentConfirm()">Confirm</button>
+    <button style="background-color: lightcoral;color:black" ion-button full (click)="conf()">Confirm</button>
   </ion-toolbar>
 </ion-footer>
