--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -79,7 +79,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar style="text-align:center" color="pink">
-    <ion-title (click)="goToConvert()">Convert ticket</ion-title>
+  <ion-toolbar style="text-align:center" color="pink" (click)="goToConvert()">
+    <ion-title >Convert ticket</ion-title>
   </ion-toolbar>
 </ion-footer>
