add more history to tradedetail & tradesell

--- a/src/pages/tradesell/tradesell.html
+++ b/src/pages/tradesell/tradesell.html
@@ -58,6 +58,81 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-grid padding>
+    <ion-row style="padding-bottom: 20px">
+      <ion-col col-12 style="text-align: center">
+        <h4>List (Sell)</h4>
+      </ion-col>
+    </ion-row>
+    <ion-list>
+
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-3>
+            Amount
+          </ion-col>
+          <ion-col col-3>
+            Prize/Unit
+          </ion-col>
+          <ion-col col-3>
+            Sell (Unit)
+          </ion-col>
+          <ion-col col-3>
+            Total sell
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>100 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>100 BTH</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>90 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>9,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+
+      <ion-item no-padding>
+        <ion-row style="font-size: 10px">
+          <ion-col col-12>
+            DD/MM/YY
+          </ion-col>
+          <ion-col col-3>
+            Amount
+          </ion-col>
+          <ion-col col-3>
+            Prize/Unit
+          </ion-col>
+          <ion-col col-3>
+            Sell (Unit)
+          </ion-col>
+          <ion-col col-3>
+            Total sell
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>100 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>100 BTH</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>90 coin</b>
+          </ion-col>
+          <ion-col col-3 style="font-size: 14px">
+            <b>9,000 BTH</b>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+
+
+    </ion-list>
+  </ion-grid>
 
  
 
