--- a/src/pages/web1/web1.html
+++ b/src/pages/web1/web1.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title>WEB LOTTO</ion-title>
   </ion-navbar>
 
@@ -18,31 +18,35 @@
       <ion-item>
         <ion-grid>
           <ion-row>
-            <ion-col col-2>
+            <ion-col>
               <ion-list>
                 <ion-row>
-                  <button color="primary" style="font-size: 18px;height: 70px;" ion-button full (click)="goweb2()">R.3</button>
-                  <ion-col col-6>
-                    <button style="font-size: 12px;height: 50px;background: peru" ion-button full (click)="goweb3()">Raising funds</button>
+                  <ion-col col-4>
+                    <button color="primary" style="font-size: 18px;height: 70px;" ion-button full (click)="goweb2()">R.3</button>
+                  </ion-col>
+                  <ion-col col-8>
+                    <ion-item>
+                      <h2 style="font-size: 22px; color: #000000">
+                        <b>ico Phase</b>
+                      </h2>
+                      <p>ico:1,000,000 THB</p>
+                    </ion-item>
                   </ion-col>
                   <ion-col col-6>
-                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb2()">Success</button>
+                    <button color="hotpink" style="font-size: 12px;height: 50px;" ion-button full (click)="goweb2()">Raising funds</button>
+                  </ion-col>
+                  <ion-col col-6>
+                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb3()">Success</button>
                   </ion-col>
                 </ion-row>
               </ion-list>
             </ion-col>
             <ion-col>
-              <ion-item>
-                <h2 style="font-size: 22px; color: #000000">ico Phase</h2>
-                <p>ico:1,000,000 THB</p>
-              </ion-item>
-            </ion-col>
-            <ion-col col-11>
               <ion-item text-center>
                 <p>Round : 3 (1/07/2018-30/07/2018) </p>
               </ion-item>
             </ion-col>
-            <ion-col col-1>
+            <ion-col item-end>
               <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
             </ion-col>
           </ion-row>
@@ -56,31 +60,35 @@
       <ion-item>
         <ion-grid>
           <ion-row>
-            <ion-col col-2>
+            <ion-col>
               <ion-list>
                 <ion-row>
-                  <button style="font-size: 18px;height: 70px; background: grey" ion-button full >R.2</button>
-                  <ion-col col-6>
-                    <button style="font-size: 12px;height: 50px;background: peru" ion-button full (click)="goweb2()">Raising funds</button>
+                  <ion-col col-4>
+                    <button style="font-size: 18px;height: 70px; background: grey" ion-button full>R.2</button>
+                  </ion-col>
+                  <ion-col col-8>
+                    <ion-item>
+                      <h2 style="font-size: 22px; color: #000000">
+                        <b>ico Phase</b>
+                      </h2>
+                      <p>ico:5,000,000 THB</p>
+                    </ion-item>
                   </ion-col>
                   <ion-col col-6>
-                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb2()">Success</button>
+                    <button color="hotpink" style="font-size: 12px;height: 50px;" ion-button full (click)="goweb2()">Raising funds</button>
+                  </ion-col>
+                  <ion-col col-6>
+                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb3()">Success</button>
                   </ion-col>
                 </ion-row>
               </ion-list>
             </ion-col>
-            <ion-col col-10>
-              <ion-item>
-                <h2 style="font-size: 22px; color: #000000">Ending30/06/2018</h2>
-                <p>ico:5,000,000 THB</p>
-              </ion-item>
-            </ion-col>
-            <ion-col col-11>
+            <ion-col>
               <ion-item text-center>
                 <p>Round : 2 (1/07/2018-30/07/2018) </p>
               </ion-item>
             </ion-col>
-            <ion-col col-1>
+            <ion-col item-end>
               <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
             </ion-col>
           </ion-row>
@@ -88,36 +96,41 @@
       </ion-item>
     </ion-list>
   </ion-card>
+
   <ion-card>
     <ion-list>
       <ion-item>
         <ion-grid>
           <ion-row>
-            <ion-col col-2>
+            <ion-col>
               <ion-list>
                 <ion-row>
-                  <button style="font-size: 18px;height: 70px; background: grey" ion-button full >R.1</button>
-                  <ion-col col-6>
-                    <button style="font-size: 12px;height: 50px;background: peru" ion-button full (click)="goweb2()">Raising funds</button>
+                  <ion-col col-4>
+                    <button style="font-size: 18px;height: 70px; background: grey" ion-button full>R.2</button>
+                  </ion-col>
+                  <ion-col col-8>
+                    <ion-item>
+                      <h2 style="font-size: 22px; color: #000000">
+                        <b>ico Phase</b>
+                      </h2>
+                      <p>ico:5,000,000 THB</p>
+                    </ion-item>
                   </ion-col>
                   <ion-col col-6>
-                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb2()">Success</button>
+                    <button color="hotpink" style="font-size: 12px;height: 50px;" ion-button full (click)="goweb2()">Raising funds</button>
+                  </ion-col>
+                  <ion-col col-6>
+                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb3()">Success</button>
                   </ion-col>
                 </ion-row>
               </ion-list>
             </ion-col>
-            <ion-col col-10>
-              <ion-item>
-                <h2 style="font-size: 22px; color: #000000">Ending30/06/2018</h2>
-                <p>ico:5,000,000 THB</p>
-              </ion-item>
-            </ion-col>
-            <ion-col col-11>
+            <ion-col>
               <ion-item text-center>
                 <p>Round : 1 (1/07/2018-30/07/2018) </p>
               </ion-item>
             </ion-col>
-            <ion-col col-1>
+            <ion-col item-end>
               <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
             </ion-col>
           </ion-row>
@@ -125,7 +138,8 @@
       </ion-item>
     </ion-list>
   </ion-card>
+
   <ion-buttons text-center>
-      <button ion-button (click)="home()"> home </button>
-  </ion-buttons> 
+    <button ion-button (click)="home()"> home </button>
+  </ion-buttons>
 </ion-content>
