--- a/src/pages/web3/web3.html
+++ b/src/pages/web3/web3.html
@@ -1,28 +1,33 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title>WEB LOTTO</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6 text-center>
-        <button center id="br" color="light" style="height: 320px" ion-button (click)="doAlert()">
-          <img src="../assets/imgs/QR3.png">
-        </button><br>
-        <h6>
-          <b>Prize Pool : 1,000,000 THB</b><br>
-          Round : 1 (01/07/2018-30/07/2018)
-        </h6>
-      </ion-col>
-      <ion-col col-6>
-        <h6><b>Game Detail</b></h6>
-        <button ion-button full id="w" color="light">How to play</button>
-        <button ion-button full id="w" color="light">Rewards</button>
-        <button ion-button full id="w" color="light">Winers</button>
-        <button ion-button full id="w" color="light">Market</button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-card>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-12 text-center>
+          <button center id="br" color="light" style="height: 220px" ion-button (click)="doAlert()">
+            <img src="../assets/imgs/QR3.png">
+          </button>
+          <br><br>
+          <h6>
+            <b>Prize Pool : 1,000,000 THB</b>
+            <br> Round : 1 (01/07/2018-30/07/2018)
+          </h6>
+        </ion-col><br><br>
+        <ion-col text-center>
+          <h4>
+            <b><u>Game Detail</u></b>
+          </h4><br>
+          <button ion-button full color="light">How to play</button>
+          <button ion-button full color="light">Rewards</button>
+          <button ion-button full color="light">Winers</button>
+          <button ion-button full color="light">Market</button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
